--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             <header>
                 <div class="cwc-navbar-brand">
                     <a href="index.html"><img style="max-width: 120px; max-height:120px;" src="images/cwc.png"></a>
-                    <a class="cwc-logo" href="index.html">Cilla World Charities Foundation<br><span>.... Humanity is love </span></a>
+                    <a class="cwc-logo" href="index.html">Cilla World Charity Foundation<br><span>.... Humanity is love </span></a>
                 </div>
                 <a href="#" class="js-cwc-nav-toggle cwc-nav-toggle"><i></i></a>
             </header>
@@ -87,33 +87,34 @@
                             <div class="text-inner align-self-start">
 
                                 <h3 class="heading">Who we are</h3>
-                                <p><strong>Cilla World Charities Foundation (CWCF)</strong> is a Ghanaian based non-profit organization, where we focus on providing care and support for children in our communities. That is challenges the youth, children
-                                    and women face in their daily lives in deprived communities. The needs, interest, ability, location, gender are considered in planning our programs.</p>
+                                <p><strong>Cilla World Charity (CWC) Foundation </strong> CWC Foundation is a Ghanaian based non-profit organization, which was founded in March 2020 by Priscilla Andoh, a native of Bawku in the Upper East Region of Ghana,
+                                    West Africa. We focus on providing care and support for less privileged children and women in our communities. and as the Nation as whole. </p>
+                                <p>Charity has always been a part of her and being able to give back to society has been her greatest joy. She met Henry, who believe in her dreams and also had the passion for giving, that was when Cilla World Charities Foundation
+                                    came to a reality. </p>
                                 <ul class="my-4">
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span><strong>Our Mission</strong>
                                         <br>
-                                        <p>Is to empower the Ghanaian child and deprived communities to advance academically, economically and health wise in order to be well placed in society</p>
+                                        <p>The aim of this foundation is to care, support and provide for Children,women and the needy in our communities. </p>
                                     </li>
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span><strong>Our Vision</strong>
                                         <br>
-                                        <p>Is to support the underprivileged children and communities – most especially in terms of education and health.</p>
+                                        <p>Projects we undertake benefit the less privileged children amd women and the community as a whole.</p>
                                     </li>
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span> <strong>Our Goals</strong>
                                         <br>
                                         <ul>
                                             <li>To ensure survival, protection, and development of all children. To make them take active part in the lives of their families, schools, and communities.</li>
-                                            <li>To support and promote skills development in young people, with a focus on entrepreneurship, employable and social skills towards addressing youth unemployment.</li>
                                         </ul>
                                     </li>
                                 </ul>
                                 <div class="row">
-                                    <div class="col-md-7 ftco-animate">
-                                        <div class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg');">
-                                            <a href="https://vimeo.com/45830194" class="button popup-vimeo"><span class="ion-ios-play"></span></a>
+                                    <div class="col-md-12 ftco-animate">
+                                        <div class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg'); height:400px">
+                                            <a href="video/cillavideo.mp4" class="button popup-vimeo"><span class="ion-ios-play"></span></a>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 d-md-flex align-items-center">
-                                        <h3 class="watchvideo-heading"><a href="#"><span class="ion-ios-play"></span> Watch our video promo</a></h3>
+                                    <div class="col-md-5 d-md-flex align-items-center">
+                                        <h3 class="watchvideo-heading"><a href="#"><span class="ion-ios-play"></span> Watch our short Video</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -121,7 +122,6 @@
                     </div>
                 </div>
             </section>
-
 
             <section class="ftco-section testimony-section img" style="background-image: url(images/bg_7.jpg);">
                 <div class="overlay"></div>
@@ -276,6 +276,8 @@
                                         <h5 class="pro">Priscilla Andoh</h5>
                                     </a>
                                     <h3><a href="ceo.html">Chief Executive Officer</a></h3>
+                                    <hr/>
+                                    <h4><a href="ceo.html">CEO Profile</a></h4>
                                     <div class="d-flex models-info">
                                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                                             <li class="ftco-animate"><a href="#"><span class="icon-twitter" style="font-size: 30px;"></span></a></li>
@@ -429,7 +431,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong> CILLA WORLD CHARITIES FOUNDATION (CWCF) </strong>
+                                </script> <strong> CILLA WORLD CHARITY (CWC)  FOUNDATION </strong>
                             </p>
                         </div>
                     </div>
@@ -476,8 +478,6 @@
                                     </div>
                                 </div>
                             </div>
-
-
                             <div class="form-group">
                                 <label for="appointment_message" class="text-black">Message</label>
                                 <textarea name="" id="appointment_message" class="form-control" cols="30" rows="10"></textarea>
