--- a/blog-single.html
+++ b/blog-single.html
@@ -82,8 +82,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 ftco-animate">
-                            <h2 class="mb-3">#1. Helps for Underprivileged Children</h2>
-                            <img src="images/hero.jpg" alt="" class="img-fluid">
+                            <h2 class="mb-3">#2. Helps for Underprivileged Children</h2>
+                            <img src="images/event_2.jpg" alt="" class="img-fluid">
                             </p>
                             <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis
                                 nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
@@ -98,13 +98,6 @@
                             <p>
                                 <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem
                                     assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-
-                                <!-- <div class="about-author d-flex p-5 bg-light">
-                                    <div class="bio align-self-md-center mr-5">
-                                        <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4">
-                                    </div>
-                                </div> -->
-
 
                                 <div class="pt-5 mt-5 ">
                                     <div class="comment-form-wrap pt-5" style="margin-top:-60px;">
@@ -146,7 +139,6 @@
                                     </div>
                                 </form>
                             </div>
-
                             <div class="sidebar-box ftco-animate">
                                 <h3>Recent Blog</h3>
                                 <div class="block-21 mb-4 d-flex">
@@ -263,7 +255,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong> CILLA WORLD CHARITIES FOUNDATION (CWCF) </strong>
+                                </script> <strong> CILLA WORLD CHARITIES (CWC)  FOUNDATION  </strong>
                             </p>
                         </div>
                     </div>
@@ -344,6 +336,13 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+
+</body>
+
+</html>ript src="js/jquery.timepicker.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<script src="js/google-map.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 
