--- a/blog-single2.html
+++ b/blog-single2.html
@@ -82,7 +82,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 ftco-animate">
-                            <h2 class="mb-3">#2. Promoting Girl Education</h2>
+                            <h2 class="mb-3">#3. Promoting Girl Education</h2>
                             <img src="images/h.jpg" alt="" class="img-fluid">
                             </p>
                             <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis
@@ -255,7 +255,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong> CILLA WORLD CHARITIES FOUNDATION (CWCF) </strong>
+                                </script> <strong> CILLA WORLD CHARITIES (CWC)  FOUNDATION  </strong>
                             </p>
                         </div>
                     </div>
