--- a/blog-single3.html
+++ b/blog-single3.html
@@ -82,8 +82,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 ftco-animate">
-                            <h2 class="mb-3">#3. Show Your Love</h2>
-                            <img src="images/hero_3.jpg" alt="" class="img-fluid">
+                            <h2 class="mb-3">#4. Show Your Love</h2>
+                            <img src="images/hero.jpg" alt="" class="img-fluid">
                             </p>
                             <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis
                                 nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
@@ -255,7 +255,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong> CILLA WORLD CHARITIES FOUNDATION (CWCF) </strong>
+                                </script> <strong>CILLA WORLD CHARITIES (CWC)  FOUNDATION </strong>
                             </p>
                         </div>
                     </div>
@@ -336,18 +336,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
-
-</body>
-
-</html>ript src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
-<script src="js/jquery.animateNumber.min.js"></script>
-<script src="js/scrollax.min.js"></script>
-<script src="js/bootstrap-datepicker.js"></script>
-<script src="js/jquery.timepicker.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="js/google-map.js"></script>
-<script src="js/main.js"></script>
 
 </body>
 
