--- a/project.html
+++ b/project.html
@@ -289,7 +289,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong> CILLA WORLD CHARITIES FOUNDATION (CWCF) </strong>
+                                </script> <strong> CILLA WORLD CHARITIES (CWC)  FOUNDATION  </strong>
                             </p>
                         </div>
                     </div>
