--- a/blog.html
+++ b/blog.html
@@ -138,7 +138,7 @@
                         </div>
                         <div class="col-md-6 d-flex ftco-animate">
                             <div class="blog-entry align-self-stretch">
-                                <a href="blog-single.html" class="block-20" style="background-image: url('images/event-3.jpg');">
+                                <a href="blog-single.html" class="block-20" style="background-image: url('images/hero.jpg');">
                                 </a>
                                 <div class="text pt-4 d-block">
                                     <div class="meta mb-3">
@@ -252,7 +252,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong> CILLA WORLD CHARITIES FOUNDATION (CWCF) </strong>
+                                </script> <strong> CILLA WORLD CHARITIES (CWC)  FOUNDATION </strong>
                             </p>
                         </div>
                     </div>
