--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Cilla World Charities Foundation - Humanity is Love</title>
+    <title>Cilla World Charity Foundation - Humanity is Love</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.2/mediaelementplayer.min.css"> -->
 
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
@@ -49,6 +52,7 @@
                                 <li><a href="project.html"><span><small>03</small>Project</span></a></li>
                                 <li><a href="blog.html"><span><small>04</small>Blog</span></a></li>
                                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
+                                <!-- </li><a data-toggle="modal" data-target="#modalRequest">GO</a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -59,7 +63,7 @@
         <div id="cwc-page">
             <header>
                 <div class="cwc-navbar-brand">
-                    <a href="index.html"><img style="max-width: 120px; max-height:120px;" src="images/cwc.png"></a>
+                    <a href="index.html"><img style="max-width: 100px; max-height:1-00px;" src="images/cwc.png"></a>
                     <a class="cwc-logo" href="index.html">Cilla World Charities Foundation<br><span>.... Humanity is love </span></a>
                 </div>
                 <a href="#" class="js-cwc-nav-toggle cwc-nav-toggle"><i></i></a>
@@ -71,7 +75,7 @@
                     <div class="container">
                         <div class="row slider-text justify-content-start align-items-center" data-scrollax-parent="true">
                             <div class="col-md-8 col-lg-7 col-sm-12 ftco-animate text mb-4" data-scrollax=" properties: { translateY: '70%' }">
-                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">CILLA WORLD CHARITIES FOUNDATION
+                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">CILLA WORLD CHARITYFOUNDATION
                                 </h1>
                                 <span class="position"></span>
                                 <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
@@ -85,7 +89,8 @@
                     <div class="container">
                         <div class="row slider-text justify-content-start align-items-center" data-scrollax-parent="true">
                             <div class="col-md-8 col-lg-7 col-sm-12 ftco-animate text mb-4" data-scrollax=" properties: { translateY: '70%' }">
-                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"> ENSURE MORE CHILDREN AND YOUNG PEOPLE SURVIVE AND THRIVE</h1>
+                                <!-- <span class="position">ENSURE MORE CHILDREN AND YOUNG PEOPLE SURVIVE AND THRIVE</span> -->
+                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong class="textme">ENSURE MORE </strong> CHILDREN AND YOUNG PEOPLE SURVIVE AND THRIVE</h1>
                                 <span class="position"></span>
                                 <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
@@ -98,8 +103,8 @@
                     <div class="container">
                         <div class="row slider-text justify-content-start align-items-center" data-scrollax-parent="true">
                             <div class="col-md-8 col-lg-7 col-sm-12 ftco-animate text mb-4" data-scrollax=" properties: { translateY: '70%' }">
-                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"> EMPOWER THE POOREST, TO TRANSFORM THEIR LIVES</h1>
-                                <span class="position"></span>
+                                <!-- <span class="position">EMPOWER THE POOREST, TO TRANSFORM THEIR LIVES</span> -->
+                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong class="textme">EMPOWER THE POOREST, TO </strong> TRANSFORM THEIR LIVES</h1>
                                 <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
                         </div>
@@ -111,8 +116,8 @@
                     <div class="container">
                         <div class="row slider-text justify-content-start align-items-center" data-scrollax-parent="true">
                             <div class="col-md-8 col-lg-7 col-sm-12 ftco-animate text mb-4" data-scrollax=" properties: { translateY: '70%' }">
-                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">INSPIRE PEOPLE TO TAKE ACTION TO CHANGE THE WORLD</h1>
-                                <span class="position"></span>
+                                <!-- <span class="position">INSPIRE PEOPLE TO TAKE ACTION TO CHANGE THE WORLD</span> -->
+                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong class="textme">INSPIRE PEOPLE TO</strong> TAKE ACTION TO CHANGE THE WORLD</h1>
                                 <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
                         </div>
@@ -124,8 +129,8 @@
                     <div class="container">
                         <div class="row slider-text justify-content-start align-items-center" data-scrollax-parent="true">
                             <div class="col-md-8 col-lg-7 col-sm-12 ftco-animate text mb-4" data-scrollax=" properties: { translateY: '70%' }">
-                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Putting Smile on People Faces</h1>
-                                <span class="position"></span>
+                                <!-- <span class="position">Putting Smile People Faces</span> -->
+                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong class="textme">Putting Smile on</strong> People Faces</h1>
                                 <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
                         </div>
@@ -145,35 +150,35 @@
                             <div class="text-inner align-self-start">
 
                                 <h3 class="heading">Who we are</h3>
-                                <p><strong>Cilla World Charities Foundation (CWCF)</strong> is a Ghanaian based non-profit organization, where we focus on providing care and support for children in our communities. That is challenges the youth, children
-                                    children and women face in their daily lives in deprived communities. The needs, interest, ability, location, gender are considered in planning our programs.</p>
+                                <p><strong>Cilla World Charity Foundation </strong> (CWC Foundation) is a Ghanaian based non-profit organization, which was founded in March 2020 by Priscilla Andoh, a native of Bawku in the Upper East Region of Ghana, West
+                                    Africa. We focus on providing care and support for less privileged children and women in our communities. and as the Nation as whole. </p>
                                 <ul class="my-4">
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span><strong>Our Mission</strong>
                                         <br>
-                                        <p>Is to empower the Ghanaian child and deprived communities to advance academically, economically and health wise in order to be well placed in society</p>
+                                        <p>The aim of this foundation is to care, support and provide for Children,women and the needy in our communities. </p>
                                     </li>
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span><strong>Our Vision</strong>
                                         <br>
-                                        <p>Is to support the underprivileged children and communities – most especially in terms of education and health.</p>
+                                        <p>Projects we undertake benefit the less privileged children amd women and the community as a whole.</p>
                                     </li>
                                     <li><span class="ion-ios-checkmark-circle mr-2"></span> <strong>Our Goals</strong>
                                         <br>
                                         <ul>
                                             <li>To ensure survival, protection, and development of all children. To make them take active part in the lives of their families, schools, and communities.</li>
-                                            <li>To support and promote skills development in young people, with a focus on entrepreneurship, employable and social skills towards addressing youth unemployment.</li>
+                                            <!-- <li>To support and promote skills development in young people, with a focus on entrepreneurship, employable and social skills towards addressing youth unemployment.</li> -->
                                         </ul>
                                     </li>
                                 </ul>
                                 <p><a href="about.html" class="btn btn-primary px-4 py-3">Read More</a></p>
 
                                 <div class="row">
-                                    <div class="col-md-7 ftco-animate">
-                                        <div class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg');">
-                                            <a href="https://vimeo.com/45830194" class="button popup-vimeo"><span class="ion-ios-play"></span></a>
+                                    <div class="col-md-12 ftco-animate">
+                                        <div class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg'); height:400px">
+                                            <a href="video/cillavideo.mp4" class="button popup-vimeo"><span class="ion-ios-play"></span></a>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 d-md-flex align-items-center">
-                                        <h3 class="watchvideo-heading"><a href="#"><span class="ion-ios-play"></span> Watch our video promo</a></h3>
+                                    <div class="col-md-5 d-md-flex align-items-center">
+                                        <h3 class="watchvideo-heading"><a href="#"><span class="ion-ios-play"></span> Watch our short Video</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -216,15 +221,6 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="services d-flex ftco-animate">
-                                    <div class="icon d-flex justify-content-center align-items-center"><span class="flaticon-quality"></span></div>
-                                    <div class="info ml-4">
-                                        <h3>Providing Shelter for Needy</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus delectus facilis molestias, error vitae praesentium quos eaque qui ea, tempore blanditiis sint reprehenderit, quaerat. Commodi ab architecto
-                                            sit suscipit exercitationem!”
-                                        </p>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div class="img col-md-6 ftco-animate" style="background-image: url('images/bg_6.jpg');">
@@ -232,24 +228,27 @@
                     </div>
                 </div>
             </section>
-
-            <section class="ftco-quote ftco-animate" style="margin-bottom: 30px; margin-top:30px;">
-                <div class="container">
-                    <div class="row d-flex">
-                        <div class="col-md-9 req-quote py-5 align-items-center img" style="background-image: url(images/bg_1.jpg);">
-                            <h3 class="ml-md-3">Volunteer or Support through Donation</h3>
-                            <span class="ml-md-3"><a href="#">Join Us Now</a></span> <span class="ml-md-3"><a href="#">Donate Now</a></span>
+            <!-- <section class="ftco-section-2">
+                <div class="container" style="margin-top: 30px; margin-bottom:30px">
+                    <div class="row">
+                        <div class="col-md-10 ftco-animate">
+                            <vide class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg'); height:300px">
+                                <a href="video/cillavideo.mp4" class="button popup-vimeo"><span class="ion-ios-play controls muted autoplay "></span></a>
+                           </vide> -->
+            <!-- </div>
+                        <div class="col-md-2 d-md-flex align-items-center">
+                            <h3 class="watchvideo-heading"><a href="video/cillavideo.mp4"><span class="ion-ios-play"></span> Watch our short video</a></h3>
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <section class="ftco-section testimony-section img" style="background-image: url(images/bg_7.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-7 mb-5 text-center heading-section ftco-animate">
-                            <h2 class="mb-4">What People Say Abaout Us</h2>
+                            <h2 class="mb-4">What People Say About Us</h2>
                         </div>
                     </div>
                     <div class="row d-md-flex justify-content-center">
@@ -467,7 +466,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong> CILLA WORLD CHARITIES FOUNDATION (CWCF) </strong>
+                                </script> <strong> CILLA WORLD CHARITIES (CWC)  FOUNDATION </strong>
                             </p>
                         </div>
                     </div>
@@ -529,8 +528,10 @@
             </div>
         </div>
     </div>
-
-
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.2/mediaelement-and-player.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
+    <!-- <script src="https://cdnjs.clouflare.com/ajax/libs/popper.js/1.14.7/umd/popper.mins.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -548,7 +549,15 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+    <!-- <script>
+        $('video').mediaelementplayer({
+            features: [
+                'playpause', 'current', 'progress', 'duration', ' volume', 'tracks', 'speed', 'quality', 'loop', 'fullscreen'
+            ]
+        });
+    </script> -->
 
 </body>
 
+</html>
 </html>
