Editing Ceo Profile

--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
                                     </a>
                                     <h3><a href="ceo.html">Chief Executive Officer</a></h3>
                                     <hr/>
-                                    <h4><a href="ceo.html">CEO Profile</a></h4>
+                                    <h4><a href="ceo.html" style="color: azure; font-size15px">CEO Profile Message</a></h4>
                                     <div class="d-flex models-info">
                                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                                             <li class="ftco-animate"><a href="#"><span class="icon-twitter" style="font-size: 30px;"></span></a></li>
