--- a/blog-single4.html
+++ b/blog-single4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Cilla World Charities Foundation</title>
+    <title>Cilla World Charity Foundation</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -42,13 +42,15 @@
                     <div class="row no-gutters">
                         <div class="col-md-12 text-center">
                             <a href="index.html"><img style="max-width: 80px; max-height:80px;" src="images/cwc.png"></a>
-                            <h1 class="mb-4"><a href="index.html" class="logo">Cilla World Charities Foundation<br><span>.... Humanity is love</span></a></h1>
+                            <h1 class="mb-4"><a href="index.html" class="logo">Cilla World Charity Foundation<br><span>.... Humanity is love</span></a></h1>
                             <ul>
                                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
                                 <li><a href="about.html"><span><small>02</small>About</span></a></li>
                                 <li><a href="project.html"><span><small>03</small>Project</span></a></li>
                                 <li class="active"><a href="blog.html"><span><small>04</small>Blog</span></a></li>
                                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
+                                <li><a href="donate.html"><span><small>05</small>Donate</span></a></li>
+                                <li><a href="involved.html"><span><small>05</small>Get Involved</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -60,7 +62,7 @@
             <header>
                 <div class="cwc-navbar-brand">
                     <a href="index.html"><img style="max-width: 120px; max-height:120px;" src="images/cwc.png"></a>
-                    <a class="cwc-logo" href="index.html">Cilla World Charities Foundation<br><span>.... Humanity is love </span></a>
+                    <a class="cwc-logo" href="index.html">Cilla World Charity Foundation<br><span>.... Humanity is love </span></a>
                 </div>
                 <a href="#" class="js-cwc-nav-toggle cwc-nav-toggle"><i></i></a>
             </header>
@@ -176,7 +178,7 @@
                     <div class="row d-flex">
                         <div class="col-md-9 req-quote py-5 align-items-center img" style="background-image: url(images/bg_1.jpg);">
                             <h3 class="ml-md-3">Volunteer or Support through Donation</h3>
-                            <span class="ml-md-3"><a href="#">Join Us Now</a></span> <span class="ml-md-3"><a href="#">Donate Now</a></span>
+                            <span class="ml-md-3"><a href="involved.html">Get Involved</a></span> <span class="ml-md-3"><a href="donate.html">Donate Now</a></span>
                         </div>
                     </div>
                 </div>
@@ -255,7 +257,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong>CILLA WORLD CHARITIES (CWC)  FOUNDATION </strong>
+                                </script> <strong>CILLA WORLD CHARITY (CWC)  FOUNDATION </strong>
                             </p>
                         </div>
                     </div>
