--- a/ceo.html
+++ b/ceo.html
@@ -49,6 +49,8 @@
                                 <li><a href="project.html"><span><small>03</small>Project</span></a></li>
                                 <li class="active"><a href="blog.html"><span><small>04</small>Blog</span></a></li>
                                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
+                                <li><a href="donate.html"><span><small>05</small>Donate</span></a></li>
+                                <li><a href="involved.html"><span><small>05</small>Get Involved</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -60,7 +62,7 @@
             <header>
                 <div class="cwc-navbar-brand">
                     <a href="index.html"><img style="max-width: 120px; max-height:120px;" src="images/cwc.png"></a>
-                    <a class="cwc-logo" href="index.html">Cilla World Charities Foundation<br><span>.... Humanity is love </span></a>
+                    <a class="cwc-logo" href="index.html">Cilla World Charity Foundation<br><span>.... Humanity is love </span></a>
                 </div>
                 <a href="#" class="js-cwc-nav-toggle cwc-nav-toggle"><i></i></a>
             </header>
@@ -142,7 +144,7 @@
                     <div class="row d-flex">
                         <div class="col-md-9 req-quote py-5 align-items-center img" style="background-image: url(images/bg_1.jpg);">
                             <h3 class="ml-md-3">Volunteer or Support through Donation</h3>
-                            <span class="ml-md-3"><a href="#">Join Us Now</a></span> <span class="ml-md-3"><a href="#">Donate Now</a></span>
+                            <span class="ml-md-3"><a href="involved.html">Get Involved</a></span> <span class="ml-md-3"><a href="donate.html">Donate Now</a></span>
                         </div>
                     </div>
                 </div>
@@ -154,7 +156,7 @@
                         <div class="col-md-3">
                             <div class="ftco-footer-widget mb-4">
                                 <h2 class="ftco-heading">
-                                    Cilla World Charities Foundation
+                                    Cilla World Charity Foundation
                                 </h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus delectus facilis molestias, error vitae praesentium quos eaque </p>
                                 <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
@@ -221,7 +223,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> <strong> CILLA WORLD CHARITIES (CWC)  FOUNDATION  </strong>
+                                </script> <strong> CILLA WORLD CHARITY(CWC)  FOUNDATION  </strong>
                             </p>
                         </div>
                     </div>
@@ -233,75 +235,24 @@
 
         </div>
 
-        <!-- Modal -->
-        <div class="modal fade" id="modalRequest" tabindex="-1" role="dialog" aria-labelledby="modalRequestLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalRequestLabel">Request a Quote</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	              <span aria-hidden="true">&times;</span>
-	            </button>
-                    </div>
-                    <div class="modal-body">
-                        <form action="#">
-                            <div class="form-group">
-                                <label for="appointment_name" class="text-black">Full Name</label>
-                                <input type="text" class="form-control" id="appointment_name">
-                            </div>
-                            <div class="form-group">
-                                <label for="appointment_email" class="text-black">Email</label>
-                                <input type="text" class="form-control" id="appointment_email">
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="appointment_date" class="text-black">Date</label>
-                                        <input type="text" class="form-control" id="appointment_date">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="appointment_time" class="text-black">Time</label>
-                                        <input type="text" class="form-control" id="appointment_time">
-                                    </div>
-                                </div>
-                            </div>
 
-
-                            <div class="form-group">
-                                <label for="appointment_message" class="text-black">Message</label>
-                                <textarea name="" id="appointment_message" class="form-control" cols="30" rows="10"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Send Message" class="btn btn-primary">
-                            </div>
-                        </form>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery-migrate-3.0.1.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.easing.1.3.js"></script>
+        <script src="js/jquery.waypoints.min.js"></script>
+        <script src="js/jquery.stellar.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/aos.js"></script>
+        <script src="js/jquery.animateNumber.min.js"></script>
+        <script src="js/scrollax.min.js"></script>
+        <script src="js/bootstrap-datepicker.js"></script>
+        <script src="js/jquery.timepicker.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+        <script src="js/google-map.js"></script>
+        <script src="js/main.js"></script>
 
 </body>
 
