--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                                 <li><a href="project.html"><span><small>03</small>Project</span></a></li>
                                 <li><a href="blog.html"><span><small>04</small>Blog</span></a></li>
                                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
+                                <li><a href="donate.html"><span><small>05</small>Donate</span></a></li>
+                                <li><a href="involved.html"><span><small>05</small>Get Involved</span></a></li>
                                 <!-- </li><a data-toggle="modal" data-target="#modalRequest">GO</a></li> -->
                             </ul>
                         </div>
@@ -78,7 +80,7 @@
                                 <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">CILLA WORLD CHARITYFOUNDATION
                                 </h1>
                                 <span class="position"></span>
-                                <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
+                                <p><a href="involved.html" class="btn btn-primary px-4 py-3">Get Involved</a> <a href="donate.html" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
                         </div>
                     </div>
@@ -92,7 +94,7 @@
                                 <!-- <span class="position">ENSURE MORE CHILDREN AND YOUNG PEOPLE SURVIVE AND THRIVE</span> -->
                                 <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong class="textme">ENSURE MORE </strong> CHILDREN AND YOUNG PEOPLE SURVIVE AND THRIVE</h1>
                                 <span class="position"></span>
-                                <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
+                                <p><a href="involved.html" class="btn btn-primary px-4 py-3">Get Involved</a> <a href="donate.html" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
                         </div>
                     </div>
@@ -105,7 +107,7 @@
                             <div class="col-md-8 col-lg-7 col-sm-12 ftco-animate text mb-4" data-scrollax=" properties: { translateY: '70%' }">
                                 <!-- <span class="position">EMPOWER THE POOREST, TO TRANSFORM THEIR LIVES</span> -->
                                 <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong class="textme">EMPOWER THE POOREST, TO </strong> TRANSFORM THEIR LIVES</h1>
-                                <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
+                                <p><a href="involved.html" class="btn btn-primary px-4 py-3">Get Involved</a> <a href="donate.html" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
                         </div>
                     </div>
@@ -118,7 +120,7 @@
                             <div class="col-md-8 col-lg-7 col-sm-12 ftco-animate text mb-4" data-scrollax=" properties: { translateY: '70%' }">
                                 <!-- <span class="position">INSPIRE PEOPLE TO TAKE ACTION TO CHANGE THE WORLD</span> -->
                                 <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong class="textme">INSPIRE PEOPLE TO</strong> TAKE ACTION TO CHANGE THE WORLD</h1>
-                                <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
+                                <p><a href="involved.html" class="btn btn-primary px-4 py-3">Get Involved</a> <a href="donate.html" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
                         </div>
                     </div>
@@ -131,7 +133,7 @@
                             <div class="col-md-8 col-lg-7 col-sm-12 ftco-animate text mb-4" data-scrollax=" properties: { translateY: '70%' }">
                                 <!-- <span class="position">Putting Smile People Faces</span> -->
                                 <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong class="textme">Putting Smile on</strong> People Faces</h1>
-                                <p><a href="#" class="btn btn-primary px-4 py-3">Join Us Now</a> <a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
+                                <p><a href="involved.html" class="btn btn-primary px-4 py-3">Get Involved</a> <a href="donate.html" class="btn btn-primary btn-outline-primary px-4 py-3">Donate Now</a></p>
                             </div>
                         </div>
                     </div>
@@ -178,7 +180,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-5 d-md-flex align-items-center">
-                                        <h3 class="watchvideo-heading"><a href="#"><span class="ion-ios-play"></span> Watch our short Video</a></h3>
+                                        <h3 class="watchvideo-heading"><a href="video/cillavideo.mp4"><span class="ion-ios-play"></span> Watch our short Video</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -228,20 +230,6 @@
                     </div>
                 </div>
             </section>
-            <!-- <section class="ftco-section-2">
-                <div class="container" style="margin-top: 30px; margin-bottom:30px">
-                    <div class="row">
-                        <div class="col-md-10 ftco-animate">
-                            <vide class="img-2 d-flex justify-content-center align-items-center" style="background-image: url('images/bg_1.jpg'); height:300px">
-                                <a href="video/cillavideo.mp4" class="button popup-vimeo"><span class="ion-ios-play controls muted autoplay "></span></a>
-                           </vide> -->
-            <!-- </div>
-                        <div class="col-md-2 d-md-flex align-items-center">
-                            <h3 class="watchvideo-heading"><a href="video/cillavideo.mp4"><span class="ion-ios-play"></span> Watch our short video</a></h3>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
 
             <section class="ftco-section testimony-section img" style="background-image: url(images/bg_7.jpg);">
                 <div class="overlay"></div>
@@ -386,7 +374,7 @@
                     <div class="row d-flex">
                         <div class="col-md-9 req-quote py-5 align-items-center img" style="background-image: url(images/bg_1.jpg);">
                             <h3 class="ml-md-3">Volunteer or Support through Donation</h3>
-                            <span class="ml-md-3"><a href="#">Join Us Now</a></span> <span class="ml-md-3"><a href="#">Donate Now</a></span>
+                            <span class="ml-md-3"><a href="involved.html">Get Involved</a></span> <span class="ml-md-3"><a href="donate.html">Donate Now</a></span>
                         </div>
                     </div>
                 </div>
