--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Cilla World Charities Foundation - Humanity is Love</title>
+    <title>Cilla World Charity Foundation - Humanity is Love</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -49,6 +49,8 @@
                                 <li><a href="project.html"><span><small>03</small>Project</span></a></li>
                                 <li><a href="blog.html"><span><small>04</small>Blog</span></a></li>
                                 <li><a href="contact.html"><span><small>05</small>Contact</span></a></li>
+                                <li><a href="donate.html"><span><small>05</small>Donate</span></a></li>
+                                <li><a href="involved.html"><span><small>05</small>Get Involved</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -114,7 +116,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-5 d-md-flex align-items-center">
-                                        <h3 class="watchvideo-heading"><a href="#"><span class="ion-ios-play"></span> Watch our short Video</a></h3>
+                                        <h3 class="watchvideo-heading"><a href="video/cillavideo.mp4"><span class="ion-ios-play"></span> Watch our short Video</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -351,7 +353,7 @@
                     <div class="row d-flex">
                         <div class="col-md-9 req-quote py-5 align-items-center img" style="background-image: url(images/bg_1.jpg);">
                             <h3 class="ml-md-3">Volunteer or Support through Donation</h3>
-                            <span class="ml-md-3"><a href="#">Join Us Now</a></span> <span class="ml-md-3"><a href="#">Donate Now</a></span>
+                            <span class="ml-md-3"><a href="involved.html">Get Involved</a></span> <span class="ml-md-3"><a href="donate.html">Donate Now</a></span>
                         </div>
                     </div>
                 </div>
@@ -364,7 +366,7 @@
                         <div class="col-md-3">
                             <div class="ftco-footer-widget mb-4">
                                 <h2 class="ftco-heading">
-                                    Cilla World Charities Foundation
+                                    Cilla World Charity Foundation
                                 </h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus delectus facilis molestias, error vitae praesentium quos eaque </p>
                                 <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
@@ -444,77 +446,24 @@
 
         </div>
 
-        <!-- Modal -->
-        <div class="modal fade" id="modalRequest" tabindex="-1" role="dialog" aria-labelledby="modalRequestLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalRequestLabel">Request a Quote</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	              <span aria-hidden="true">&times;</span>
-	            </button>
-                    </div>
-                    <div class="modal-body">
-                        <form action="#">
-                            <div class="form-group">
-                                <label for="appointment_name" class="text-black">Full Name</label>
-                                <input type="text" class="form-control" id="appointment_name">
-                            </div>
-                            <div class="form-group">
-                                <label for="appointment_email" class="text-black">Email</label>
-                                <input type="text" class="form-control" id="appointment_email">
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="appointment_date" class="text-black">Date</label>
-                                        <input type="text" class="form-control" id="appointment_date">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="appointment_time" class="text-black">Time</label>
-                                        <input type="text" class="form-control" id="appointment_time">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="appointment_message" class="text-black">Message</label>
-                                <textarea name="" id="appointment_message" class="form-control" cols="30" rows="10"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Send Message" class="btn btn-primary">
-                            </div>
-                        </form>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/main.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery-migrate-3.0.1.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.easing.1.3.js"></script>
+        <script src="js/jquery.waypoints.min.js"></script>
+        <script src="js/jquery.stellar.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/aos.js"></script>
+        <script src="js/jquery.animateNumber.min.js"></script>
+        <script src="js/scrollax.min.js"></script>
+        <script src="js/bootstrap-datepicker.js"></script>
+        <script src="js/jquery.timepicker.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+        <script src="js/google-map.js"></script>
+        <script src="js/main.js"></script>
 
 </body>
-
-
-</html>
 
 </html>
